--- a/MovieAPI/appsettings.json
+++ b/MovieAPI/appsettings.json
@@ -5,6 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
-}
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ElokuvaDBContext": "Server=tcp:jarnosql.database.windows.net,1433;Initial Catalog=JarnoDB;Persist Security Info=False;User ID=UserName1;Password=VaikeaSalasana2;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "MvcMovieContext": "Data Source=MvcMovie.db"
 
+  }
+}
