--- a/MovieAPI/appsettings.json
+++ b/MovieAPI/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ElokuvaDBContext": "Server=tcp:jarnosql.database.windows.net,1433;Initial Catalog=JarnoDB;Persist Security Info=False;User ID=UserName1;Password=VaikeaSalasana2;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "ElokuvaDBContext": "Server=tcp:stone900.database.windows.net,1433;Initial Catalog=GreenlizardDb;Persist Security Info=False;User ID=movieupdater;Password=VeryGoodPWD9;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
     "MvcMovieContext": " (IF YOU USE LOCAL DB Remove this) Data Source=MvcMovie.db"
 
   }
